<resources>
    <string name="app_name">Mabo</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Trending</string>
    <string name="title_dashboard">People</string>
    <string name="title_notifications">Notification</string>
    <string name="title_post">Post</string>
    <string name="facebook_app_id">632902320536337</string>
    <string name="fb_login_protocol_scheme">fb[632902320536337]</string>
    <string name="ok">OK</string>
    <string name="warning">Warning</string>
    <string name="info">Info</string>
    <string name="str_check_network">Check internet connection</string>
    <string name="str_settings">Settings</string>
    <string name="str_editprofile">edit profile</string>
    <string name="str_myprofile">my profile</string>
    <string name="str_name">Name</string>
    <string name="str_phonenumber">Phone number</string>
    <string name="str_gender">Gender</string>
    <string name="str_mail">Email id</string>
    <string name="str_notifications">Notifications</string>
    <string name="str_emailnotification">email notifications</string>
    <string name="str_pushnotification">push notifications</string>
    <string name="str_onlyfavorite">only with favorite</string>
    <string name="str_scrumblelocation">scramble location</string>
    <string name="str_privacy">Privacy</string>
    <string name="str_private">Private</string>
    <string name="str_public">Public</string>
    <string name="str_feedback">Feedback</string>
    <string name="str_logout">Logout</string>
    <string name="str_terms">Terms and conditions</string>
    <string name="str_legal">legal, terms and conditions</string>
    <string name="str_feeddesc">we would like to hear your experience</string>
    <string name="str_logoutdesc">you can logout from here</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="str_logout_dialog">Are you sure you want to logout?</string>
    <string name="action_upload_image">Upload Image</string>
    <string name="action_delete_image">Delete Image</string>
    <string name="str_done">Done</string>
    <string name="activity_crop">Crop Image</string>
    <string name="storage_rationale">Required camera and storage permission to take images and videos</string>
    <string name="str_location">Required location permission for this app</string>
    <string name="str_delete">Delete Account</string>
    <string name="delete">Delete</string>
    <string name="str_delete_image">Are you sure you want to delete this photo?</string>
    <string name="str_complete_profile_dialog">Completing your profile will increase you being searched by others</string>
    <string name="str_gotit">Got it!!</string>
    <string name="later">Later</string>
    <string name="title_gallery">Profile Picture</string>
    <string name="API_KEY">AIzaSyAeXUrQLavMvM41CFerkZLF79ROdKL1lvs</string>
    <string name="PLACE_API_KEY">AIzaSyBeRTTXDSCqJI5SPwJZqnzBJz7ymvkbZWg</string>
    <string name="DIRECTION_API_KEY">AIzaSyDymbEpz1WZ7BP-trpaDUoB-byvpNocsuc</string>
    <string name="title_favorite">Favorites</string>
    <string name="str_postedon">Posted on</string>
    <string name="str_kms">kms</string>
    <string name="action_findme">Find me</string>
    <string name="action_findPartner">Find Partner</string>
    <string name="action_findfriends">Find Friends</string>
    <string name="str_save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="str_gosettings">Go Settings</string>
    <string name="str_enable_location">Enable screen.Location</string>
    <string name="str_enable_location_content">screen.Location service not enabled! Go to settings to enable it.</string>
    <string name="action_findnearme">Find near me</string>
    <string name="str_back">Back</string>
    <string name="str_stepone">Step 1/2</string>
    <string name="str_uploaddesc">Upload your photo here</string>
    <string name="str_addlocation">Pick screen</string>
    <string name="str_addinterest">Post related to</string>
    <string name="str_next">Next -></string>
    <string name="str_steptwo">Step 2/2</string>
    <string name="str_postmessage">Post Message</string>
    <string name="str_writecaption">Write a caption...</string>
    <string name="str_tagpeoplpe">Tag people</string>
    <string name="str_post">POST</string>
    <string name="str_locdesc">  Tap to pin location</string>
    <string name="action_image_save">Save</string>
    <string name="str_titleinterest">Select your interest to proceed</string>
    <string name="str_interestinfo">Select anyone interest to proceed with the app</string>
    <string name="str_interest">Interest</string>
    <string name="str_tappeople">Tap to tag people</string>
    <string name="str_postempty">Enter the message to be posted</string>
    <string name="str_postbelong">Select the post belongs to which interest</string>
    <string name="str_nopost">No post nearby, to create your post tap + icon</string>
    <string name="resToastText">Resource Toast</string>
    <string name="str_with">with</string>
    <string name="str_likes">Likes</string>
    <string name="str_mapdirection">Direction</string>
    <string name="share_using">Share using</string>
    <string name="str_email">Email</string>
    <string name="str_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_chat">Chat</string>
    <string name="str_friends">Friends</string>
    <string name="str_followers">Followers</string>
    <string name="title_likes">Likes</string>
    <string name="title_comments">Comments</string>
    <string name="str_readcontact">Allow us to read the contact list to sync with app</string>
    <string name="str_loadingpost">Post is loading please wait...</string>
    <string name="str_nosinglepost">Post not found</string>
    <string name="str_estimated">Estimated Time: </string>
    <string name="action_setrange">Set Range</string>
    <string name="str_setrange">Set Range</string>
    <string name="str_pickvideo">Upload video</string>
    <string name="str_addvideo">Upload video Click to add</string>
    <string name="trimming_progress">Trimming your video...</string>
    <string name="short_seconds">sec</string>
    <string name="megabyte">MB</string>
    <string name="kilobyte">KB</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="label_select_video">Select Video</string>
    <string name="toast_cannot_retrieve_selected_video">Cannot retrieve selected video</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="save">Save</string>
    <string name="txt_video">Video Player</string>
    <string name="str_phonepermission">Require reading phone permission</string>
    <string name="str_refresh">Refresh</string>
    <string name="str_search">Search People</string>
    <string name="action_search">Search</string>
    <string name="user">user</string>
    <string name="selectcountry">Select country</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="str_verify">Verify your phone number</string>
    <string name="str_enter_name">Enter you name</string>
    <string name="enter_email">Enter your valid emailid</string>
    <string name="enter_feedback">Enter your feedback here</string>
    <string name="str_submit">Submit</string>
</resources>