<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="Settings" />
    <item
        android:id="@+id/navigation_trending"
        android:icon="@drawable/ic_trending"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_people"
        android:icon="@drawable/ic_people"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat"
        android:title="chat" />
     <item
       android:id="@+id/navigation_notify"
       android:icon="@drawable/ic_notify"
       android:title="@string/title_notifications" />
</menu>
