<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:navigationIcon="@drawable/ic_back"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            app:titleTextColor="@color/apptheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
        </androidx.appcompat.widget.Toolbar>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mToolbar"
            android:id="@+id/txtusername"
            android:padding="@dimen/margin5"
            android:layout_margin="@dimen/margin20"
            android:background="@drawable/background"
            />
         <EditText
             android:layout_marginLeft="@dimen/margin20"
             android:layout_marginRight="@dimen/margin20"
             android:layout_below="@+id/txtusername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/enter_email"
             android:background="@drawable/cc_rounded_border_edittext"
             android:padding="@dimen/margin5"
             android:inputType="textEmailAddress"
             android:scrollbars="vertical"
             android:id="@+id/edt_email"/>
         <EditText
             android:gravity="top|left"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin20"
             android:layout_below="@+id/edt_email"
             android:id="@+id/edt_message"
             android:inputType="textMultiLine"
             android:minHeight="@dimen/dimen300"
             android:maxHeight="@dimen/margin30"
             android:padding="@dimen/margin5"
             android:background="@drawable/cc_rounded_border_edittext"
             android:hint="@string/enter_feedback"/>
         <Button
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/edt_message"
             android:textColor="@color/white"
             android:text="@string/str_submit"
             android:background="@drawable/button_background"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/btn_submit"/>

    </RelativeLayout>
</layout>