<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/apptheme"
    android:padding="0dip">

    <LinearLayout
        android:id="@+id/numberInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"

        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_verify"
            android:textColor="@color/white"
            android:textSize="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/inputbox_new"
            android:orientation="vertical">
        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_enter_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:textColor="@color/send_otp_blue"
            android:textColorHint="@color/white_trans"
            android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/inputbox_new"
            android:orientation="horizontal">

            <com.advengers.mabo.Sendotp.CountrySpinner
                android:id="@+id/spinner"
                style="@style/SpinnerTheme"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:prompt="@string/selectcountry"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:weightSum="2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/inputbox_new"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_countrycode"
            android:layout_weight="0.6"
            android:layout_width="0dp"
            android:padding="@dimen/margin10"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_weight="1.4"
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_mobile_number"
            android:inputType="phone"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:textColor="@color/send_otp_blue"
            android:textColorHint="@color/white_trans"
            android:textSize="16sp">

            <requestFocus />
        </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/smsVerificationButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight=".5"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:onClick="onButtonClicked"
                android:padding="10dp"
                android:text="Verify Mobile"
                android:textAllCaps="false"
                android:textColor="#1A79CC"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:visibility="gone">

        <Button
            android:id="@+id/smsVerificationButton1"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_blue_generic"
            android:minWidth="132dp"
            android:minHeight="56dp"
            android:onClick="onButtonClicked"
            android:text="SMS Verification"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="20sp" />


    </LinearLayout>


</RelativeLayout>
